--- a/labs.lyx
+++ b/labs.lyx
@@ -1874,12 +1874,349 @@ Task 1 - Print text at a specified position using ASCII encoding
 Introduction
 \end_layout
 
+\begin_layout Standard
+At the end of lab 1, we traversed the entire VGA buffer to output a blue
+ screen.
+ Now we will continue to use slices to output specific text at specified
+ positions.
+\end_layout
+
 \begin_layout Subsection
 Implementation
 \end_layout
 
+\begin_layout Standard
+
+\series bold
+Step 1: Modify the BACKGROUND_COLOR constant
+\end_layout
+
+\begin_layout Standard
+In the previous implementation, we used the u16 data type for assignment
+ because we didn't need to output specific characters.
+ However, this time we will only define the color part.
+ If you forget how to define it, you can refer to the documentation.
+\begin_inset CommandInset ref
+LatexCommand ref
+reference "sec:VGA-text-buffer"
+plural "false"
+caps "false"
+noprefix "false"
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+Change constant name into COLOR 
+\end_layout
+
+\begin_layout Standard
+\begin_inset listings
+inline false
+status open
+
+\begin_layout Plain Layout
+
+const COLOR: u8 = 0x04; // black background, red foreground
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+You could change into different value to represent different color as you
+ wish!
+\end_layout
+
+\begin_layout Standard
+
+\series bold
+Step 2: Modify vga_buffer
+\end_layout
+
+\begin_layout Standard
+We change pointer datatype from u16 to u8 because we want to assign character
+ and color seperately.
+ Length change to 4000 so the end of buffer remain unchanged.
+\end_layout
+
+\begin_layout Standard
+\begin_inset listings
+inline false
+status open
+
+\begin_layout Plain Layout
+
+let vga_buffer = unsafe { core::slice::from_raw_parts_mut(0xb8000 as *mut
+ u8, 4000) }; 
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+
+\series bold
+Step 3: Print character
+\end_layout
+
+\begin_layout Standard
+Delete the for loop under buffer definition and change into
+\end_layout
+
+\begin_layout Standard
+\begin_inset listings
+inline false
+status open
+
+\begin_layout Plain Layout
+
+    vga_buffer[0] = b'H';
+\end_layout
+
+\begin_layout Plain Layout
+
+    vga_buffer[1] = COLOR;
+\end_layout
+
+\begin_layout Plain Layout
+
+    vga_buffer[2] = b'e';
+\end_layout
+
+\begin_layout Plain Layout
+
+    vga_buffer[3] = COLOR;
+\end_layout
+
+\begin_layout Plain Layout
+
+    vga_buffer[4] = b'l';
+\end_layout
+
+\begin_layout Plain Layout
+
+    vga_buffer[5] = COLOR;
+\end_layout
+
+\begin_layout Plain Layout
+
+    vga_buffer[6] = b'l';
+\end_layout
+
+\begin_layout Plain Layout
+
+    vga_buffer[7] = COLOR;
+\end_layout
+
+\begin_layout Plain Layout
+
+    vga_buffer[8] = b'o';
+\end_layout
+
+\begin_layout Plain Layout
+
+    vga_buffer[9] = COLOR;
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Itemize
+b'H': It represents a byte literal(a single byte of data).
+ In this case, corresponds to the ASCII encoding of the uppercase letter
+ 'H'.
+\end_layout
+
+\begin_layout Itemize
+COLOR: Color part of the character, represent red foreground and black backgroun
+d.
+\end_layout
+
+\begin_layout Standard
+Remember to keep 
+\begin_inset listings
+inline false
+status open
+
+\begin_layout Plain Layout
+
+    loop {} 
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+Don't delete it!
+\end_layout
+
+\begin_layout Standard
+You would see the output like this if everything going well
+\end_layout
+
+\begin_layout Standard
+\begin_inset Graphics
+	filename /home/lucia/Pictures/Screenshots/Screenshot from 2024-02-07 19-19-19.png
+	width 60page%
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+
+\series bold
+Step 4: Print somewhere else
+\end_layout
+
+\begin_layout Standard
+Remember that
+\end_layout
+
+\begin_layout Standard
+\begin_inset listings
+inline false
+status open
+
+\begin_layout Plain Layout
+
+const BUFFER_HEIGHT: usize = 25;
+\end_layout
+
+\begin_layout Plain Layout
+
+const BUFFER_WIDTH: usize = 80;
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+You can print words at the new line
+\end_layout
+
+\begin_layout Standard
+\begin_inset listings
+inline false
+status open
+
+\begin_layout Plain Layout
+
+// write "World" at the next line
+\end_layout
+
+\begin_layout Plain Layout
+
+    vga_buffer[160] = b'W';
+\end_layout
+
+\begin_layout Plain Layout
+
+    vga_buffer[161] = COLOR;
+\end_layout
+
+\begin_layout Plain Layout
+
+    vga_buffer[162] = b'o';
+\end_layout
+
+\begin_layout Plain Layout
+
+    vga_buffer[163] = COLOR;
+\end_layout
+
+\begin_layout Plain Layout
+
+    vga_buffer[164] = b'r';
+\end_layout
+
+\begin_layout Plain Layout
+
+    vga_buffer[165] = COLOR;
+\end_layout
+
+\begin_layout Plain Layout
+
+    vga_buffer[166] = b'l';
+\end_layout
+
+\begin_layout Plain Layout
+
+    vga_buffer[167] = COLOR;
+\end_layout
+
+\begin_layout Plain Layout
+
+    vga_buffer[168] = b'd';
+\end_layout
+
+\begin_layout Plain Layout
+
+    vga_buffer[169] = COLOR;
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+Or at the end
+\end_layout
+
+\begin_layout Standard
+\begin_inset listings
+inline false
+status open
+
+\begin_layout Plain Layout
+
+    // End
+\end_layout
+
+\begin_layout Plain Layout
+
+    vga_buffer[3998] = b'!';
+\end_layout
+
+\begin_layout Plain Layout
+
+    vga_buffer[3999] = COLOR;
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+Now you can visually see the correspondence between memory addresses and
+ screen positions.
+ 
+\end_layout
+
 \begin_layout Subsection
 Output
+\end_layout
+
+\begin_layout Standard
+The code may look cumbersome, but it's okay because it's just to demonstrate
+ the correspondence between the VGA buffer and the screen.
+ We'll implement the print! and println! functions in a more elegant way.
 \end_layout
 
 \begin_layout Standard
